根据epubcheck给的校验建议修复了Epub的格式问题(fix issues with epub format)

--- a/resources/static/index.html
+++ b/resources/static/index.html
@@ -72,7 +72,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row" id="tip-container">
             <div class="w-100 alert alert-warning alert-dismissible fade show" role="alert" id="tip" style="display: none">
                 <div></div>
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -125,7 +125,7 @@
                     <input type="text" class="form-control" name="date" placeholder="出版日期(格式:XXXX-XX-XX)" title="date">
                 </div>
                 <div class="input-group col-md-4 mb-3">
-                    <input type="text" class="form-control" name="language" placeholder="语种" title="language">
+                    <input type="text" class="form-control" name="language" placeholder="语种(RFC3066标准)" title="language">
                 </div>
                 <div class="input-group col-md-4 mb-3">
                     <input type="text" class="form-control" name="type" placeholder="类型" title="type">
@@ -149,7 +149,7 @@
                     <input type="text" class="form-control" name="rights" placeholder="权限描述" title="rights">
                 </div>
                 <div class="input-group col-md-12 mb-3">
-                    <input type="text" class="form-control" name="subject" placeholder="主题词/关键词(多个使用;分隔)" title="subject">
+                    <input type="text" class="form-control" name="subject" placeholder="主题词/关键词(多个使用 | 分隔)" title="subject">
                 </div>
                 <div class="input-group col-md-12">
                     <div class="input-group-prepend">
