--- a/resources/static/index.html
+++ b/resources/static/index.html
@@ -113,6 +113,11 @@
                 </div>
                 &emsp;
                 <div class="custom-control custom-switch">
+                    <input type="checkbox" class="custom-control-input" id="reverseSort">
+                    <label class="custom-control-label" for="reverseSort">日漫模式</label>
+                </div>
+                &emsp;
+                <div class="custom-control custom-switch">
                     <input type="checkbox" class="custom-control-input" id="autoClear">
                     <label class="custom-control-label" for="autoClear" title="成功发送请求后自动清空表单">自动清空表单</label>
                 </div>
